--- a/tracktui/Cargo.toml
+++ b/tracktui/Cargo.toml
@@ -8,3 +8,4 @@ color-eyre = "0.6.5"
 crossterm = "0.29.0"
 csv = "1.3.1"
 ratatui = "0.29.0"
+serde = { version = "1.0.228", features = ["derive"] }
